List Of Locations Endpoint & Test
